Working End to End

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">color-wave</string>
+    <string name="title_activity_display_image">DisplayImageActivity</string>
 </resources>
