--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">color-wave</string>
+
+    <string name="how_it_works_plus">How it works  +</string>
+    <string name="how_it_works_minus">How it works  -</string>
+
 </resources>
