--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="how_it_works">How it works</string>
     <string name="upload_image">Upload image</string>
     <string name="title_activity_select_theme">SelectThemeActivity</string>
+    <string name="title_activity_camera">CameraActivity</string>
 
 </resources>
